Update peacock settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,24 +1,24 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#31e2e1",
-        "activityBar.activeBorder": "#e33be3",
-        "activityBar.background": "#31e2e1",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#e33be3",
-        "activityBarBadge.foreground": "#15202b",
-        "sash.hoverBorder": "#31e2e1",
-        "statusBar.background": "#1cc4c3",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#169797",
-        "statusBarItem.remoteBackground": "#1cc4c3",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#1cc4c3",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#1cc4c399",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#632d41",
+        "activityBar.activeBorder": "#56833c",
+        "activityBar.background": "#632d41",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#56833c",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "sash.hoverBorder": "#632d41",
+        "statusBar.background": "#401d2a",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#632d41",
+        "statusBarItem.remoteBackground": "#401d2a",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#401d2a",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#401d2a99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#1cc4c3",
+    "peacock.color": "#401d2a",
     "files.associations": {
         "array": "cpp",
         "atomic": "cpp",
